# Agora

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  PLAN.md  README.md  README_ja.md  README_zh.md  config.yaml  demo.cast  demo1.cast  demo2.cast  docker-compose.yaml
backend/: .env.example  Makefile  config.yaml  pyproject.toml  pytest.ini
backend/agora/: __init__.py  __main__.py  doctor.py
backend/agora/agents/: agent.py  council.py
backend/agora/api/: _state.py  agents.py  app.py  (+5 more)
backend/data/: .input_history
backend/tests/: conftest.py  judge.py  test_attention.py  test_codex_bridge.py  test_config.py  test_control_plane_api.py  test_control_plane_protocol_runs.py  test_control_plane_registry.py  test_control_plane_stage_inventory.py  test_control_plane_stage_routing.py  test_control_plane_task_lifecycle.py  test_control_plane_task_state.py  test_council.py  test_dispatch.py  test_doctor.py  test_embeddings.py  test_execution.py  test_executor.py  test_integration.py  test_memory_skills.py  test_phase2.py  test_projects.py  test_protocol_agent_adapter.py  test_protocol_freeze.py  test_protocol_orchestration.py  test_provider_usage.py  test_requirements.py  test_research.py  test_runtime_capabilities.py  test_scenarios.py  test_task_orchestration.py  test_task_orchestration_api.py  test_tasks_controlplane.py  test_tools.py  test_web_network.py  test_web_ui.py  test_web_ui_extra.py  test_workflow_orchestrator.py  test_workflows.py  test_workspaces.py
(+201 files in other folders)
